# ai-write

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  ITERATION_PLAN.md  PLAN.md  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES_v1.4.1.md  RELEASE_NOTES_v1.4.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.7.0.md  RELEASE_NOTES_v1.7.1.md  RELEASE_NOTES_v1.7.2.md  RELEASE_NOTES_v1.7.3.md  RELEASE_NOTES_v1.7.4.md  RELEASE_NOTES_v1.8.0.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 27738d6e6203_add_deleted_at_to_projects.py  482b5e188065_add_llm_endpoints_and_update_model_.py  5feb9a2cff43_add_llm_endpoints_table.py  a0504000_v05_prompt_routing.py  a0600000_v06_decompile.py  a0700000_v07_state_machine.py  a0800000_v08_writing_engine.py  a0900000_v09_settings_graph.py  a1000700_v10_chapter_variants.py  a1000800_v10_langgraph_map.py  a1001200_v10_usage_quotas.py  a1001300_v13_target_word_count.py  a1001400_v14_llm_tier.py  a1001401_v141_prompt_max_tokens.py  a1001500_v150_outline_book_unique.py  a1001501_v150_llm_call_logs_tier_fallback.py  a1001600_v150_scene_writing.py  a1001601_v150_scene_endpoint_backfill.py  a1001700_v150_evaluate_tasks.py  a1001800_v150_cascade_tasks.py  a1001900_v150_world_rule_cascade_metadata.py  a1001901_v190_characters_unique_project_name.py  a1001902_v190_relationships_unique_rel_key.py  a1001903_v190_world_rules_unique_key.py  a1001904_v190_locations_table.py  (+9 more)
backend/app/: config.py  main.py
backend/scripts/: c4_e2e_smoke.py  cleanup_orphan_qdrant_slices.py  repair_volume_outline_raw_text.py  v174_p02_backfill_summaries.py
backend/tests/: conftest.py  test_api_auth.py  test_api_core.py  test_b1_prime_evaluator_tier_fallback.py  test_b1_tier_fallback.py  test_b2_prime_entity_writer.py  test_b2_recommendation_guard.py  test_c1_scene_orchestrator.py  test_c2_auto_revise.py  test_c3_prompt_cache.py  test_c4_cascade.py  test_services.py  test_v05_models.py  test_v10_observability.py  test_v16_prompt_cache.py  test_v16_scene_metrics.py  test_v173_p0_unit_coverage.py  test_v173_stream_by_route_nameerror.py  test_v174_p01_outline_injection.py  test_v174_p02_chapter_summarizer.py  test_v174_p03_outline_to_facts.py  test_v174_p1a_style_chain.py  test_v17_x2_unified_run_async.py  test_v17_x3_orphan_cleanup.py  test_v17_x5_cascade_api.py  test_v17_z1_task_type_propagation.py  test_v17_z3_time_llm_call_propagation.py  test_workspace_flow.py
(+295 files in other folders)
